refactor: update and test note repository and service methods