@@ -2,6 +2,7 @@ package io.github.lsmcodes.notes_api.service.note.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -16,10 +17,17 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.test.context.ActiveProfiles;
 
 import io.github.lsmcodes.notes_api.model.note.Note;
+import io.github.lsmcodes.notes_api.model.user.User;
 import io.github.lsmcodes.notes_api.repository.note.NoteRepository;
+import io.github.lsmcodes.notes_api.util.NotesApiUtil;
 
 /**
  * Unit tests for the {@link NoteServiceImpl} class.
@@ -37,60 +45,66 @@ public class NoteServiceImplTest {
 
     /**
      * Tests the {@link NoteServiceImpl#save(Note note)} method to ensure it
-     * correctly saves a note to the database.
+     * interacts correctly with the {@link NoteRepository#save(Note note)} method
+     * providing the specified user.
      */
     @Test
     @Order(1)
-    @DisplayName("NoteServiceImpl save method should save note")
+    @DisplayName("NoteServiceImpl save method should interact correctly with the repository")
     public void save_ShouldSaveNote() {
         // Arrange
-        Note note = getNewNote();
+        Note note = NotesApiUtil.getNewNote();
         Mockito.when(this.noteRepository.save(note)).thenReturn(note);
 
         // Act
         Note savedNote = this.noteServiceImpl.save(note);
 
         // Assert
-        assertThat(savedNote)
-                .isNotNull()
-                .isEqualTo(note);
+        assertThat(savedNote).isNotNull().isEqualTo(note);
     }
 
     /**
-     * Tests the {@link NoteServiceImpl#existsById(UUID id)} method to ensure it
-     * correctly verifies if a note exists in the database by the provided id.
+     * Tests the {@link NoteServiceImpl#existsByUserAndId(User user, UUID id)}
+     * method to ensure it interacts correctly with the
+     * {@link NoteRepository#existsByUserAndId(User user, UUID id)} method providing
+     * the specified user and id.
      */
     @Test
     @Order(2)
-    @DisplayName("NoteServiceImpl existsById method should return true when note exists")
-    public void existsById_ShouldReturnTrue_WhenNoteExists() {
+    @DisplayName("NoteServiceImpl existsByUserAndId method should interact correctly with the repository")
+    public void existsByUserAndId_ShouldInteractCorrectlyWithTheRepository() {
         // Arrange
-        UUID id = UUID.fromString("cb4a46cc-1d5a-49ac-a1e6-376f1bbcc338");
-        Mockito.when(this.noteRepository.existsById(id)).thenReturn(true);
+        User user = NotesApiUtil.getNewUser();
+        UUID id = UUID.randomUUID();
+
+        Mockito.when(this.noteRepository.existsByUserAndId(user, id)).thenReturn(true);
 
         // Act
-        boolean noteExists = this.noteServiceImpl.existsById(id);
+        boolean noteExists = this.noteServiceImpl.existsByUserAndId(user, id);
 
         // Assert
         assertThat(noteExists).isTrue();
     }
 
     /**
-     * Tests the {@link NoteServiceImpl#findById(UUID id)} method to ensure it
-     * correctly retrieves a note by the provided id from the database.
+     * Tests the {@link NoteServiceImpl#findByUserAndId(User user, UUID id)} method
+     * to ensure it interacts correctly with the
+     * {@link NoteRepository#findByUserAndId(User user, UUID id)} method providing
+     * the specified user and id.
      */
     @Test
     @Order(3)
-    @DisplayName("NoteServiceImpl findById method should return correct note")
-    public void findById_ShouldReturnCorrectNote() {
+    @DisplayName("NoteServiceImpl findByUserAndId method should interact correctly with the repository")
+    public void findByUserAndId_ShouldInteractCorrectlyWithTheRepository() {
         // Arrange
-        Note note = getNewNote();
-        UUID id = UUID.fromString("cb4a46cc-1d5a-49ac-a1e6-376f1bbcc338");
+        User user = NotesApiUtil.getNewUser();
+        Note note = NotesApiUtil.getNewNote();
+        UUID id = note.getId();
 
-        Mockito.when(this.noteRepository.findById(id)).thenReturn(Optional.of(note));
+        Mockito.when(this.noteRepository.findByUserAndId(user, id)).thenReturn(Optional.of(note));
 
         // Act
-        Optional<Note> foundNote = this.noteServiceImpl.findById(id);
+        Optional<Note> foundNote = this.noteServiceImpl.findByUserAndId(user, id);
 
         // Assert
         assertThat(foundNote).isPresent();
@@ -98,108 +112,122 @@ public class NoteServiceImplTest {
     }
 
     /**
-     * Tests the {@link NoteServiceImpl#findAll()} method to ensure it correctly
-     * retrieves all notes from the database.
+     * Tests the {@link NoteServiceImpl#findByUser(User user, Pageable pageable)}
+     * method to ensure it interacts correctly with the
+     * {@link NoteRepository#findByUser(User user, Pageable pageable)} method
+     * providing the specified user and pageable.
      */
     @Test
     @Order(4)
-    @DisplayName("NoteServiceImpl findAll method should return all notes")
-    public void findAll_ShouldReturnAllNotes() {
+    @DisplayName("NoteServiceImpl findByUser method should interact correctly with the repository")
+    public void findByUser_ShouldInteractCorrectlyWithTheRepository() {
         // Arrange
-        List<Note> notes = List.of(getNewNote(), getNewNote());
-        Mockito.when(this.noteRepository.findAll()).thenReturn(notes);
+        Pageable pageable = PageRequest.of(0, 10, Sort.by("title").descending());
+
+        User user = NotesApiUtil.getNewUser();
+        Note firstNote = NotesApiUtil.getNewNote();
+        Note secondNote = NotesApiUtil.getNewNote();
+        secondNote.setTitle("A sample title");
+
+        Page<Note> page = new PageImpl<>(Arrays.asList(firstNote, secondNote), pageable, 2);
+        Mockito.when(this.noteRepository.findByUser(user, pageable)).thenReturn(page);
 
         // Act
-        List<Note> foundNotes = this.noteServiceImpl.findAll();
+        Page<Note> foundPage = this.noteServiceImpl.findByUser(user, pageable);
+        List<Note> pageContent = foundPage.getContent();
 
         // Assert
-        assertThat(foundNotes)
-                .hasSize(2)
-                .containsAll(notes);
+        assertThat(foundPage).hasSize(2).isEqualTo(page);
+        assertThat(pageContent.get(0)).isEqualTo(firstNote);
+        assertThat(pageContent.get(1)).isEqualTo(secondNote);
     }
 
     /**
      * Tests the
-     * {@link NoteServiceImpl#findByTitleOrContentContainingIgnoreCase(String term)}
-     * method to ensure it finds notes whose title or content contains the specified
-     * term, ignoring case.
+     * {@link NoteServiceImpl#findByUserAndTitleOrContentContainingIgnoreCase(User user, String term, Pageable pageable)}
+     * method to ensure it interacts correctly with the
+     * {@link NoteRepository#findByUserAndTitleOrContentContainingIgnoreCase(User user, String term, Pageable pageable)}
+     * method providing the specified user, term and pageable.
      */
     @Test
     @Order(5)
-    @DisplayName("NoteServiceImpl findByTitleOrContentContainingIgnoreCase method should return correct note")
-    public void findByTitleOrContentContainingIgnoreCase_ShouldReturnCorrectNote() {
+    @DisplayName("NoteServiceImpl findByUserAndTitleOrContentContainingIgnoreCase method should interact correctly with the repository")
+    public void findByUserAndTitleOrContentContainingIgnoreCase_ShouldInteractCorrectlyWithTheRepository() {
         // Arrange
-        List<Note> notes = List.of(getNewNote(), getNewNote());
-        String term = "Content";
+        Pageable pageable = PageRequest.of(0, 10, Sort.by("title").ascending());
 
-        Mockito.when(this.noteRepository.findByTitleOrContentContainingIgnoreCase(term)).thenReturn(notes);
+        User user = NotesApiUtil.getNewUser();
+        Note firstNote = NotesApiUtil.getNewNote();
+        Note secondNote = NotesApiUtil.getNewNote();
+        firstNote.setTitle("A sample title");
+
+        Page<Note> page = new PageImpl<>(Arrays.asList(firstNote, secondNote), pageable, 2);
+        String term = "Sample";
+        Mockito.when(this.noteRepository.findByUserAndTitleOrContentContainingIgnoreCase(user, term, pageable))
+                .thenReturn(page);
 
         // Act
-        List<Note> foundNotes = this.noteServiceImpl.findByTitleOrContentContainingIgnoreCase(term);
+        Page<Note> foundPage = this.noteServiceImpl.findByUserAndTitleOrContentContainingIgnoreCase(user, term, pageable);
+        List<Note> pageContent = foundPage.getContent();
 
         // Assert
-        assertThat(foundNotes)
-                .hasSize(2)
-                .containsAll(notes);
+        assertThat(foundPage).hasSize(2).isEqualTo(page);
+        assertThat(pageContent.get(0)).isEqualTo(firstNote);
+        assertThat(pageContent.get(1)).isEqualTo(secondNote);
     }
 
     /**
-     * Tests the {@link NoteServiceImpl#findByTagsInIgnoreCase(List<String> tags)}
-     * method to ensure it finds notes whose tags contains at least one of the
-     * specified tags, ignoring case.
+     * Tests the
+     * {@link NoteServiceImpl#findByUserAndTagsInIgnoreCase(User user, List tags, Pageable pageable)}
+     * method to ensure it interacts correctly with the
+     * {@link NoteRepository#findByUserAndTagsInIgnoreCase(User user, List tags, Pageable pageable)}
+     * method providing the specified user, tags and pageable.
      */
     @Test
     @Order(6)
-    @DisplayName("NoteServiceImpl findByTagsInIgnoreCase method should return correct notes")
-    public void findByTagsInIgnoreCase_ShouldReturnCorrectNotes() {
+    @DisplayName("NoteServiceImpl findByUserAndTagsInIgnoreCase method should interact correctly with the repository")
+    public void findByUserAndTagsInIgnoreCase_ShouldInteractCorrectlyWithTheRepository() {
         // Arrange
-        List<Note> notes = List.of(getNewNote(), getNewNote());
-        Mockito.when(this.noteRepository.findByTagsInIgnoreCase(Mockito.anyList())).thenReturn(notes);
+        Pageable pageable = PageRequest.of(0, 10, Sort.by("title").descending());
+
+        User user = NotesApiUtil.getNewUser();
+        Note firstNote = NotesApiUtil.getNewNote();
+        Note secondNote = NotesApiUtil.getNewNote();
+        secondNote.setTitle("A sample title");
+
+        Page<Note> page = new PageImpl<>(Arrays.asList(firstNote, secondNote), pageable, 2);
+        List<String> tags = List.of("tag");
+        Mockito.when(this.noteRepository.findByUserAndTagsInIgnoreCase(user, tags, pageable)).thenReturn(page);
 
         // Act
-        List<Note> foundNotesByTag = this.noteServiceImpl.findByTagsInIgnoreCase(List.of("tag"));
-        List<Note> foundNotesByTags = this.noteServiceImpl.findByTagsInIgnoreCase(List.of("Tag", "Another tag"));
+        Page<Note> foundPage = this.noteServiceImpl.findByUserAndTagsInIgnoreCase(user, tags, pageable);
+        List<Note> pageContent = foundPage.getContent();
 
         // Assert
-        assertThat(foundNotesByTag)
-                .hasSize(2)
-                .containsAll(notes);
-
-        assertThat(foundNotesByTags)
-                .hasSize(2)
-                .containsAll(notes);
+        assertThat(foundPage).hasSize(2).isEqualTo(page);
+        assertThat(pageContent.get(0)).isEqualTo(firstNote);
+        assertThat(pageContent.get(1)).isEqualTo(secondNote);
     }
 
     /**
-     * Tests the {@link NoteServiceImpl#deleteById(UUID id)} service method to
-     * ensure it correctly deletes a note correctly by the provided id from the
-     * database.
+     * Tests the {@link NoteServiceImpl#deleteByUserAndId(User user, UUID id)}
+     * service method to ensure it interacts correctly with the
+     * {@link NoteRepository#deleteByUserAndId(User user, UUID id)} method providing
+     * the specified user and id.
      */
     @Test
     @Order(7)
-    @DisplayName("NoteServiceImpl deleteById method should delete correct note")
-    public void deleteById_ShouldDeleteCorrectNote() {
+    @DisplayName("NoteServiceImpl deleteByUserAndId method should interact correctly with the repository")
+    public void deleteByUserAndId_ShouldInteractCorrectlyWithTheRepository() {
         // Arrange
-        UUID id = UUID.fromString("cb4a46cc-1d5a-49ac-a1e6-376f1bbcc338");
+        User user = NotesApiUtil.getNewUser();
+        UUID id = UUID.randomUUID();
 
         // Act
-        this.noteServiceImpl.deleteById(id);
+        this.noteServiceImpl.deleteByUserAndId(user, id);
 
         // Assert
-        Mockito.verify(this.noteRepository).deleteById(id);
-    }
-
-    /**
-     * Creates a generic {@link Note} instance for use in tests.
-     * 
-     * @return The created {@link Note} instance.
-     */
-    private Note getNewNote() {
-        return Note.builder()
-                .tags(List.of("Tag", "Another Tag"))
-                .title("Untitled")
-                .content("Sample content")
-                .build();
+        Mockito.verify(this.noteRepository).deleteByUserAndId(user, id);
     }
 
 }
